fix header bg alignment

--- a/_less/layout.less
+++ b/_less/layout.less
@@ -1,5 +1,5 @@
 body {
-  background: @beige url(../images/header.jpg) no-repeat left top;;
+  background: @beige url(../images/header.jpg) no-repeat center top;
 }
 a {
   font-weight: bold;
